kustomize/mako-frontend/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
  namespace: mako-frontend
spec:
  type: ExternalName
  externalName: keycloak.keycloak.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-external
  namespace: mako-frontend
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
