kustomize/mako-frontend/ingress-consolidated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mako-frontend-shell
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mako-ingress-ip-global"
    networking.gke.io/managed-certificates: "mako-bank-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: mako-bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mako-shell
                port:
                  name: http
